# slimctx

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-exe.yml  ci.yml  demo.yml  release.yml
docs/: launch-post.md
scripts/: accuracy_benchmark.py  benchmark_quality.py  demo_agent_expand.py  download_encodings.py  pyinstaller_entry.py
src/contextly/: __init__.py  ab_monitor.py  audit.py  cache_opt.py  ccr.py  cli.py  config.py  controller.py  dashboard.py  deps.py  expand.py  failover.py  firewall.py  gateway_dashboard.py  gateway_stats.py  injection.py  learn.py  mcp_gateway.py  mcp_server.py  metrics.py  pricing.py  scorer.py  server.py
src/contextly/compressors/: __init__.py  base.py  code.py  image.py  json_smart.py  json_table.py  llmlingua.py  logs.py  passthrough.py  prose.py  registry.py
src/contextly/providers/: __init__.py  base.py
src/contextly/routes/: __init__.py  observability.py  openai_compat.py
src/contextly/tokenizer/: __init__.py  base.py  registry.py  tiktoken_bundled.py  word_fallback.py
tests/: conftest.py
tests/benchmarks/: __init__.py  test_json_benchmarks.py
tests/integration/: test_adaptive.py  test_bench_cli.py  test_cache_optimization.py  test_ccr_routes.py  test_firewall.py  test_health.py  test_image_compression.py  test_innovations.py  test_messages_route.py  test_metrics_endpoint.py  test_offline_first.py  test_openai_compat.py  test_quality_routes.py  test_request_modes.py  test_safe_mode.py  test_token_stats.py
tests/unit/: test_ab_monitor.py  test_audit.py  test_cache_opt.py  test_ccr.py  test_ccr_sqlite.py  test_cli.py  test_code.py  test_compress_messages.py  test_controller.py  test_expand_filter.py  test_failover.py  test_firewall.py  test_gateway_stats.py  test_image.py  test_injection.py  test_json_smart.py  test_json_table.py  test_learn.py  test_llmlingua.py  test_logs.py  test_mcp_gateway.py  test_mcp_server.py  test_metrics.py  test_passthrough.py  test_pricing.py  test_prose.py  test_providers_base.py  test_registry.py  test_scorer.py  test_server_logging.py  test_shared_memory.py  test_tiktoken_bundled.py  test_tokenizer_registry.py  test_tool_compressor_registry.py  test_word_fallback.py
