[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextly"
version = "0.1.0"
description = "Smart context optimization proxy for LLM APIs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["llm", "proxy", "compression", "openai", "token-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "tiktoken>=0.7.0",
    "datasketch>=1.6.0",
]

[project.optional-dependencies]
ml = ["sentence-transformers>=3.0.0", "llmlingua>=0.2.2"]
nlp = ["yake>=0.4.8"]
image = ["pillow>=10.0.0"]
ast = [
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-go>=0.21.0",
]
mcp-server = ["mcp>=1.0.0"]
all = ["contextly[ml,nlp,ast,mcp-server,image]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
    "respx>=0.21.0",
    "hypothesis>=6.100.0",
    "pytest-socket>=0.7.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "anyio[trio]>=4.0.0",
    "pytest-cov>=5.0.0",
    # Optional runtime extras required to lint and run the full test suite
    # (test_mcp_server.py imports `mcp`; test_code.py needs the tree-sitter
    # grammars; mypy strict needs `mcp` for FastMCP decorator types).
    "mcp>=1.0.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-go>=0.21.0",
]

[project.scripts]
contextly = "contextly.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/contextly"]
# Include encoding files downloaded by scripts/download_encodings.py
artifacts = ["src/contextly/tokenizer/data/*.tiktoken"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/docs", "/scripts", "/LICENSE", "/README.md"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "UP",       # pyupgrade
    "N",        # pep8-naming
    "ANN",      # flake8-annotations
    "S",        # flake8-bandit
    "RUF",      # ruff-specific rules
]
ignore = [
    "S101",    # assert used — allowed in tests
    "ANN401",  # Dynamically typed Any allowed
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "N802", "N803"]
# Dashboard files embed inline HTML/CSS/JS strings that cannot be wrapped at 100 chars.
"src/contextly/dashboard.py" = ["E501"]
"src/contextly/gateway_dashboard.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["contextly"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
strict = true
# Match the CI lint runner (Python 3.12). Pinning to 3.11 makes mypy reject the
# PEP 695 `type` statements found in numpy 2.x stubs (pulled in via datasketch),
# failing with "Type statement is only supported in Python 3.12 and greater".
# Runtime support for 3.11 is still verified by the pytest matrix.
python_version = "3.12"
mypy_path = ["src"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = [
    "datasketch.*",
    "structlog.*",
    "tiktoken.*",
    "prometheus_client.*",
    "yake.*",
    "tree_sitter.*",
    "tree_sitter_python.*",
    "tree_sitter_javascript.*",
    "tree_sitter_go.*",
    "mcp.*",
]
ignore_missing_imports = true

# The low-level MCP Server exposes untyped decorators (@server.list_tools(),
# @server.call_tool()); relax the two strict flags they trip for this module only.
[[tool.mypy.overrides]]
module = ["contextly.mcp_gateway"]
disallow_untyped_decorators = false
disallow_untyped_calls = false

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--strict-markers", "-q"]
markers = [
    "integration: mark test as integration (may mock network)",
    "benchmark: mark test as benchmark",
    "e2e: mark test as end-to-end (requires docker-compose)",
]

[tool.coverage.run]
source = ["src/contextly"]
omit = ["*/dashboard/*", "*/data/*"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
